--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,11 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://intense-retreat-45808.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-chrono": "^1.20.0",
     "react-dom": "^18.2.0",
