--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
+  "proxy:":"https://web-production-be99.up.railway.app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
