--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "react-cookie": "^7.1.4",
+    "slugify": "^1.6.6"
   }
 }
