--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,23 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://jaykwonproject-com-backend.vercel.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.3",
     "react-chrono": "^1.20.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.3",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
